# cladder

./: .gitignore  .omnifig.yaml  LICENSE  README.md  demo-mini  main.py  requirements.txt  setup.cfg
.github/workflows/: tests.yaml
assets/: anticommonsense.yml  templates.yml
assets/arguments/: contagion.yml  music.yml
assets/new/: air_quality.yml  contagion.yml  music.yml  piano.yml  salary.yml  smoking.yml  street_sign.yml  sugar.yml  taxes.yml  training_program-HEPHAESTUS.yml  training_program.yml  treatment.yml
assets/stories/: alarm.yml  blood_pressure.yml  candle.yml  celebrity.yml  cholesterol.yml  college_salary.yml  college_wage.yml  elite_students.yml  encouagement_program.yml  firing_employee.yml  firing_squad.yml  floor_wet.yml  forest_fire.yml  gender_admission.yml  gender_admission_state.yml  gender_pay.yml  getting_late.yml  getting_tanned.yml  hospitalization.yml  man_in_relationship.yml  price.yml  (+26 more)
causalbenchmark/: __init__.py  formatting.py  generator.py  util.py
config/: anti.yml  debug.yaml  demo-mini.yml  demo.yml  deterministic.yml  nonsense.yml  old-all.yml  prop.yml  uncladder.yml
data/: prompts.json  questions.json  test-generate-anti.json  test-generate-det.json  test-generate-easy.json  test-generate-hard.json  test-generate-non.json  test-model-meta.json
notebooks/: adjustment.ipynb  ambiguity.ipynb  anticommonsense.ipynb  bayes.ipynb  calibration.ipynb  concept2.ipynb  concepts.ipynb  convert_yml.ipynb  dowhy.ipynb  examples.ipynb  given.ipynb  joint.ipynb  optuna.ipynb  sampling.ipynb  scratch.ipynb  simpson.ipynb  vocab.ipynb
(+78 files in other folders)
