[metadata]
name = causal-benchmark
description = "A Benchmark to evaluate causal reasoning abilities of LLMs"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
version = attr: causalbenchmark.__version__

[options]
packages = find:

[options.extras_require]
test = pytest
